# SnapAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prd.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: evaluator.py  intent_classifier.py  react_agent.py  token_tracker.py  tool_executor.py
backend/app/agent/middleware/: __init__.py  base.py  input_guard_mw.py  logging_mw.py  token_limit_mw.py
backend/app/agent/tools/: arxiv_tool.py  (+10 more)
backend/app/api/: deps.py
backend/app/core/: encryption.py  exceptions.py  security.py
backend/app/db/: base.py  database.py  models.py  vector_models.py
backend/app/rag/: chunking.py  embedding.py  ocr.py  parsing.py  retriever.py  vectorstore.py
backend/app/schemas/: agent.py  auth.py  chat.py  dashboard.py  file.py  model.py  system_setting.py  template.py  token_limit.py  user.py
backend/app/services/: agent_service.py  auth_service.py  captcha_service.py  chat_service.py  file_service.py  model_service.py  system_setting_service.py  template_seed.py  template_service.py  token_limit_service.py  usage_service.py  user_service.py
backend/docker/: Dockerfile.dev  Dockerfile.prd
backend/sql/: 00_init.sql  01_users.sql  02_models.sql  03_templates.sql  04_files.sql  05_agents.sql  06_agent_tools.sql  07_agent_files.sql  08_agent_sub_agents.sql  09_chat_sessions.sql  10_chat_messages.sql  11_snap_vec_ebd.sql  12_usage_logs.sql  13_token_limits.sql  14_system_settings.sql
backend/tests/: conftest.py  test_api.py  test_rag_e2e.py
(+83 files in other folders)
